--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div ng-show="isCurrentPage('demo')">
             <div class="form-group">
                 <label>Start typing a word.</label>
-                <input type="text" name="search" class="form-control"
+                <input type="text" name="prefix" class="form-control"
                     fast-matcher
                     fast-matcher-source="wordsPromise"
                     fast-matcher-output="matchingWords"
@@ -74,7 +74,7 @@
                     fast-matcher-selection-callback="makeSelection"
                     placeholder="Search {{words.length | number}} words"
                     ng-disabled="!loaded"
-                    ng-model="search" />
+                    ng-model="prefix" />
             </div>
 
             <dl class="list-group">
@@ -149,8 +149,7 @@
     fast-matcher-output="[array to be populated]"
     fast-matcher-property="[selector property (omit for a simple array of strings)]"
     fast-matcher-current-callback="[function to call w/ the index of the current item]"
-    fast-matcher-selection-callback="[function to call when an item is selected]"
-    ng-model="[bind to something so the directive knows what to $watch]" /&gt;
+    fast-matcher-selection-callback="[function to call when an item is selected]" /&gt;
 
 &lt;!--
     You can put this list anywhere on the page and style it however you want.
