added link to project gutenberg

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
                 See the <a href="#usage" ng-click="showPage('usage')">usage</a> section for details
                 on how to use it.
             </p>
+            <p>
+                The data for this demo is taken from
+                <a href="http://www.gutenberg.org/" target="_blank">Project Gutenberg</a>.
+            </p>
         </div>
 
         <ul class="nav nav-pills">
