--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     fast-matcher
                     fast-matcher-source="booksPromise"
                     fast-matcher-output="matchingBooks"
-                    fast-matcher-properties="title,titleBase,author"
+                    fast-matcher-properties="title,titleBase,author,authorFullName"
                     fast-matcher-current-callback="setCurrentBook"
                     fast-matcher-selection-callback="selectBook"
                     placeholder="Search {{books.length | number}} books from Project Gutenberg"
