added support for specifying a limit

--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
 
       You don't have to include this attribute if the data source is just a list of strings.
 
+    * fast-matcher-limit
+      The maximum number of matches to find.
+
     * fast-matcher-current-callback
       A function to call with the index of the currently selected item, whenever it changes. This is
       to support keyboard-based selection (letting the user hit Up/Down to highlight items in the
