added support for anyWord option (closes #1)

--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
     * fast-matcher-limit
       The maximum number of matches to find.
 
+    * fast-matcher-any-word
+      Whether to support matching by any word (not just the first word) in a string.
+
     * fast-matcher-current-callback
       A function to call with the index of the currently selected item, whenever it changes. This is
       to support keyboard-based selection (letting the user hit Up/Down to highlight items in the
