added bottom margin to attribute list items

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             font-family: "Consolas", "Inconsolata", monospace;
             font-size: 110%;
         }
+        .attribute-list li {
+            margin-bottom: 12px;
+        }
     </style>
 
     <script>
